--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
   <p class="text-center max-w-3xl mx-auto text-lg">
     Metodologia de gestão de metas usada para definir e acompanhar objetivos ambiciosos e mensuráveis, ajudando organizações, equipes e pessoas a alinharem esforços e focarem no que realmente importa.
   </p>
+  <br>
+  <p  class="text-center max-w-3xl mx-auto text-lg" style="color: lightblue;">
+    GOOGLE. Guia: Defina metas com OKRs. re:Work with Google, [s. d.]. Disponível em: https://rework.withgoogle.com/guides/set-goals-with-okrs/. Acesso em: 05 de setembro de 2025.
+  </p>
+  <br>
+  <p  class="text-center max-w-3xl mx-auto text-lg" style="color: lightblue;">
+    DOERR, John. Avalie o que importa: Como o Google, Bono Vox e a Fundação Gates sacudiram o mundo com os OKRs. Rio de Janeiro: Intrínseca, 2018.
+  </p>
 </section>
 
 <!-- Slide 2 -->
